--- a/views/charity/searchCharities.ejs
+++ b/views/charity/searchCharities.ejs
@@ -25,16 +25,16 @@
                     <li class="sidebar-offcanvas" style="font-style: italic; font-size: 40px; padding-bottom: 10%" >
                         <strong>Search Charities</strong></li>
                     <li>
-                        <a href="/charities" style="color: #000000;">My charities</a>
+                        <a href="/charity/charities" style="color: #000000;">My charities</a>
                     </li>
                     <li  >
-                        <a href="/searchCharities" style="color: #000000;"><strong>Search Charities</strong></a>
+                        <a href="/charity/searchCharities" style="color: #000000;"><strong>Search Charities</strong></a>
                     </li>
                     <li>
-                        <a href="/listCharities" style="color: #000000;">List A-Z</a>
+                        <a href="/charity/listCharities" style="color: #000000;">List A-Z</a>
                     </li>
                     <li>
-                        <a href="/hotCharities" style="color: #000000;">Recommended</a>
+                        <a href="/charity/hotCharities" style="color: #000000;">Recommended</a>
                     </li>
                 </ul>
             </div>
