--- a/views/charity/charities.ejs
+++ b/views/charity/charities.ejs
@@ -7,9 +7,10 @@
     <title>WillGive</title>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
+    <link rel="stylesheet" href="/assets/css/simplePagination.css" >
 
     <%activeMenu = "Charities"%>
-    <%include layout/navbar.ejs%>
+    <%include ../layout/navbar.ejs%>
 </head>
 <body>
 <div class="container sidebar-content" style="height:auto; min-height: 90%; ">
@@ -22,16 +23,16 @@
                     <li class="sidebar-offcanvas" style="font-style: italic; font-size: 40px; padding-bottom: 10%" >
                         <strong>Search Charities</strong></li>
                     <li>
-                        <a href="/charities" style="color: #000000;">My charities</a>
+                        <a href="/charity/charities" style="color: #000000;"><strong>My charities</strong></a>
                     </li>
                     <li  >
-                        <a href="/searchCharities" style="color: #000000;">Search Charities</a>
+                        <a href="/charity/searchCharities" style="color: #000000;">Search Charities</a>
                     </li>
                     <li>
-                        <a href="/listCharities" style="color: #000000;">List A-Z</a>
+                        <a href="/charity/listCharities" style="color: #000000;">List A-Z</a>
                     </li>
                     <li>
-                        <a href="/hotCharities" style="color: #000000;"><strong>Recommended</strong></a>
+                        <a href="/charity/hotCharities" style="color: #000000;">Recommended</a>
                     </li>
                 </ul>
             </div>
@@ -39,13 +40,13 @@
 
         <!-- main area -->
         <div class="col-xs-12 col-sm-9" data-spy="scroll" style="padding-left: 3%" data-target="#sidebar-nav">
-            <h2 class="sub-header">Recommended charities</h2>
+            <h2 class="sub-header">My charities</h2>
             <div id="page" ></div>
 
             <div id="resultsContainer" class="">
 
                 <div class="table-responsive">
-                    <table id="resultTable" class="table table-striped">
+                    <table id="favoriteCharityTable" class="table table-striped">
                         <thead>
                         <tr>
                             <th>name</th>
@@ -57,28 +58,30 @@
                             <th>Mission</th>
                         </tr>
                         </thead>
-                        <tbody id="resultTableBody">
+                        <tbody id="favoriteCharityTableBody">
                         </tbody>
                     </table>
                 </div>
             </div>
             <div id="botPage" style="float: left"></div>
             <div id="noresult" style="display: none" >
-                <h3>No search result found.</h3>
+                <h3>Sorry, you have no favorite charity yet</h3>
+            </div>
+            <div id="notLogin" style="display: none" >
+                <h3>Sorry, you have not logged in yet</h3>
             </div>
 
         </div><!-- /.col-xs-12 main -->
     </div><!--/.row-->
 </div><!--/.container-->
-<%include layout/footer.ejs%>
+<%include ../layout/footer.ejs%>
 <script src="/jquery/dist/jquery.min.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/jquery-validation/dist/jquery.validate.js"></script>
 <script src="/assets/js/jquery.simplePagination.js"></script>
 <script>
-    var favoriteCharity=[];
-
-    var defaultHTML =
+    var favoriteCharity=[];		
+	var defaultHTML =
         '<tr> <td> {name} </td> '+
         ' <td> {EIN} </td> ' +
         ' <td> {City} </td> ' +
@@ -89,21 +92,16 @@
         ' </tr> ';
 
     function replaceHtml(transaction){
-	    var website = transaction.website;
-		if(website.indexOf("http:") == -1)
-			website = "http://" + website;
         return defaultHTML.replace("{name}",transaction.name)
                 .replace("{EIN}",transaction.EIN)
                 .replace("{City}",transaction.city)
-		.replace("{State}",transaction.state)
-                .replace("{Phone}",transaction.phone)
-                .replace("{Website}","<a style=\"color: #000000;\" href='" + website + "' target='_blank'>" + transaction.website + "</a>")
+                .replace("{Phone}",transaction.state)
+                .replace("{Website}",transaction.website)
                 .replace("{Mission}",transaction.mission)
                 ;
 
     }
-        // function initResultPage(searchResults){
-    function initResultPage(data){
+    function initResultPage(favoriteCharity){
         $('#botPage').empty();
 
         var itemsOnPage = 20;
@@ -135,11 +133,10 @@
     function displayNoResults(){
         //resultConainer.empty();
         $('#botPage').empty();
-        $('#noresult').show(); //add keyword
+        $('#noresult').show(); 
     }
 
     function displayNotLoggedIn(){
-        //resultConainer.empty();
         $('#botPage').empty();
         $('#notLogin').show();
 
@@ -149,7 +146,7 @@
         return cellvalue.substr(0,10);
     }
     function getUserFavoriteCharity(){
-       $.get('/services/user/getFavoriteCharity',function(data){
+       $.get('/services/charity/getFavoriteCharity',function(data){
            if(!data || data == "failed") {
                //get  failed
                return;
@@ -167,9 +164,9 @@
 
    $( document).ready(function(){
    	<% if ( 'undefined' == typeof user ) { %>
-       	getUserFavoriteCharity();
-       	<% } else { %>
        	displayNotLoggedIn();
+       	<% } else { %>		
+		getUserFavoriteCharity();       	
 		<%}%>
    })
 </script>
