--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -28,7 +28,7 @@
             </ul>
             <form class="nav navbar-nav navbar-form" action="/charity/searchCharities" method="get" role="search">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search Charities" name="keyword" id="keyword">
+                    <input type="text" class="form-control" placeholder="Search Charities" name="keyword" id="narbarKeyword">
                     <div class="input-group-btn">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
