refactoring app.js, separate it into sevaral files

--- a/views/charity/searchCharities.ejs
+++ b/views/charity/searchCharities.ejs
@@ -132,7 +132,7 @@
         }
     }
     function displayNoResults(){
-        //resultConainer.empty();
+        $('#resultTableBody').empty();
         $('#botPage').empty();
         $('#noresult').show(); 
     }
