--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="exampleNavbarCollapse">
             <ul class="nav navbar-nav">
                 <li class="<%=menuClass[0]%>"><a href="/">Home</a></li>
-                <li class="<%=menuClass[5]%>"><a href="/charity">Charities</a></li>
+                <li class="<%=menuClass[5]%>"><a href="/charities">Charities</a></li>
                 <li class="<%=menuClass[1]%>"><a href="/aboutus">About Us</a></li>
                 <li class="<%=menuClass[2]%>"><a href="/contactus">Contact Us</a></li>
             </ul>
@@ -30,7 +30,7 @@
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search Charities" name="keyword" id="narbarKeyword">
                     <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        <button class="btn btn-default" type="submit" style="background-color:#ffb900;"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
                 </div>
             </form>
