Refactors charity pages. Enable "add to favorite" feature.

--- a/views/charity/searchCharities.ejs
+++ b/views/charity/searchCharities.ejs
@@ -57,7 +57,7 @@
                         <thead>
                         <tr>
                             <th>Organization</th>
-			    <th>&nbsp;</th>
+							<th>&nbsp;</th>
                             <th>EIN</th>
                             <th>City</th>
                             <th>State</th>
@@ -83,84 +83,8 @@
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/jquery-validation/dist/jquery.validate.js"></script>
 <script src="/assets/js/jquery.simplePagination.js"></script>
+<%include charityList.ejs%>
 <script>
-    var defaultHTML =
-        '<tr> <td> {name} </td> '+
-        ' <td> {ICONS} </td> ' +
-        ' <td> {EIN} </td> ' +
-        ' <td> {City} </td> ' +
-        ' <td> {State} </td> ' +
-        ' <td> {Phone} </td> ' +
-        ' <td> {Mission} </td> ' +
-        ' </tr> ';
-    var moreCount = 0;
-    function unHide(c)
-    {
-     document.getElementById("s" + c).style.display = "none";
-     document.getElementById("h" + c).style.display = "block";
-    }
-
-    function addMore(text)
-    {
-        var cut = 80;
-        if (text.length < cut) return text;
-	    moreCount ++;
-        text = "<span id=s" + moreCount + ">" + text.substring(0, cut-7) + " <a style=\"color: #202090;cursor:hand; cursor:pointer\" onClick=\"unHide('" + moreCount + "')\">...(more)</a></span>"
-		+ "<span id=h"+moreCount + " style=\"display:none\">" + text + "</span>";
-        return text;
-    }		
-
-    function replaceHtml(transaction){
-	    var website = transaction.website;
-		if(website.indexOf("http:") == -1)
-			website = "http://" + website;
-        return defaultHTML.replace("{name}","<a style=\"color: #202090;\" href='/charity?id=" + transaction.recipient_id + "'>" + transaction.name + "</a>")
-		.replace("{ICONS}","<a style=\"color: #202090;\" href='" + website + "' target='_blank'><img src='/images/web.png' border=0 width=20 height=20></a>")
-                .replace("{EIN}",transaction.EIN)
-                .replace("{City}",transaction.city)
-		.replace("{State}",transaction.state)
-                .replace("{Phone}",transaction.phone)
-                .replace("{Mission}",addMore(transaction.mission))
-                ;
-    }
-    function initResultPage(results){
-        $('#botPage').empty();
-
-        var itemsOnPage = 10;
-        var resultConainer = $('#resultTableBody');
-        initPage();
-        $('#botPage').pagination({  
-            items: results.length, 
-            itemsOnPage: itemsOnPage,  
-            onInit: initPage,
-            currentPage: 0,
-            onPageClick: function(){
-                var page_index = $("#botPage").pagination('getCurrentPage') -1;
-                resultConainer.empty();
-                for(var i=page_index*itemsOnPage;i<(page_index+1)*itemsOnPage;++i) {
-                    resultConainer.append(replaceHtml(results[i]));
-                }
-                $("#page").pagination('drawPage',$("#botPage").pagination('getCurrentPage'));
-            },
-            cssStyle: 'light-theme' 
-        });
-        function initPage() {
-            resultConainer.empty();
-            for(var i=0;i<itemsOnPage && i< results.length;++i) {
-                resultConainer.append(replaceHtml(results[i]));
-            }
-        }
-    }
-    function displayNoResults(){
-        $('#resultTableBody').empty();
-        $('#botPage').empty();
-        $('#noresult').show(); 
-    }
-
-    function dateDisplayFormatter( cellvalue, options, rowObject ){
-        return cellvalue.substr(0,10);
-    }
-	
     $('#Search').click(function() {
 		searchCharity ();
     });
