--- a/views/charity/charities.ejs
+++ b/views/charity/charities.ejs
@@ -44,21 +44,20 @@
             <div id="page" ></div>
 
             <div id="resultsContainer" class="">
-
                 <div class="table-responsive">
-                    <table id="favoriteCharityTable" class="table table-striped">
+                    <table id="resultTable" class="table table-striped">
                         <thead>
                         <tr>
-                            <th>name</th>
+                            <th>Organization</th>
+							<th>&nbsp;</th>
                             <th>EIN</th>
                             <th>City</th>
                             <th>State</th>
                             <th>Phone</th>
-                            <th>Website</th>
                             <th>Mission</th>
                         </tr>
                         </thead>
-                        <tbody id="favoriteCharityTableBody">
+                        <tbody id="resultTableBody">
                         </tbody>
                     </table>
                 </div>
@@ -79,73 +78,14 @@
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/jquery-validation/dist/jquery.validate.js"></script>
 <script src="/assets/js/jquery.simplePagination.js"></script>
+<%include charityList.ejs%>
 <script>
-    var favoriteCharity=[];		
-	var defaultHTML =
-        '<tr> <td> {name} </td> '+
-        ' <td> {EIN} </td> ' +
-        ' <td> {City} </td> ' +
-        ' <td> {State} </td> ' +
-        ' <td> {Phone} </td> ' +
-        ' <td> {Website} </td> ' +
-        ' <td> {Mission} </td> ' +
-        ' </tr> ';
-
-    function replaceHtml(transaction){
-        return defaultHTML.replace("{name}",transaction.name)
-                .replace("{EIN}",transaction.EIN)
-                .replace("{City}",transaction.city)
-                .replace("{Phone}",transaction.state)
-                .replace("{Website}",transaction.website)
-                .replace("{Mission}",transaction.mission)
-                ;
-
-    }
-    function initResultPage(favoriteCharity){
-        $('#botPage').empty();
-
-        var itemsOnPage = 20;
-        var resultConainer = $('#favoriteCharityTableBody');
-
-        $('#botPage').pagination({  
-            items: favoriteCharity.length, 
-            itemsOnPage: itemsOnPage,  
-            onInit: initPage,
-            currentPage: 0,
-            onPageClick: function(){
-                var page_index = $("#botPage").pagination('getCurrentPage') -1;
-                resultConainer.empty();
-                for(var i=page_index*itemsOnPage;i<(page_index+1)*itemsOnPage;++i) {
-                    resultConainer.append(replaceHtml(favoriteCharity[i]));
-                }
-                //$("#page").pagination('drawPage',$("#botPage").pagination('getCurrentPage'));
-
-            },
-            cssStyle: 'light-theme' 
-        });
-        function initPage() {
-            resultConainer.empty();
-            for(var i=0;i<itemsOnPage && i< favoriteCharity.length;++i) {
-                resultConainer.append(replaceHtml(favoriteCharity[i]));
-            }
-        }
-    }
-    function displayNoResults(){
-        //resultConainer.empty();
-        $('#botPage').empty();
-        $('#noresult').show(); 
-    }
-
     function displayNotLoggedIn(){
         $('#botPage').empty();
         $('#notLogin').show();
 
     }
-    
-    function dateDisplayFormatter( cellvalue, options, rowObject ){
-        return cellvalue.substr(0,10);
-    }
-    function getUserFavoriteCharity(){
+    function getUserFavoriteCharity(){	    
        $.get('/services/charity/getFavoriteCharity',function(data){
            if(!data || data == "failed") {
                //get  failed
@@ -153,7 +93,6 @@
            }
            if(data.length>0) {
                console.dir(data);
-               favoriteCharity = data;
                initResultPage(data);
            }
            else {
