--- a/views/recipientLogin/recipientLogin.ejs
+++ b/views/recipientLogin/recipientLogin.ejs
@@ -1,3 +1,129 @@
-/**
- * Created by XiTU on 1/23/15.
- */
+<!doctype html>
+<html lang="en" ng-app="willGiveApp" xmlns="http://www.w3.org/1999/html">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>WillGive</title>
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/assets/css/social-buttons.css">
+    <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
+
+
+    <%activeMenu = "SignIn"%>
+    <%include ../layout/navbar.ejs%>
+</head>
+<body>
+
+<div class="container" style="height:auto; min-height: 90%; margin: 0 auto -80px;">
+    <h2 class="form-signin-heading text-center">WillGive Charity Login</h2>
+    <hr align="left" width="100%" background="0xff0000">
+    <form id="recipientSignInForm" class="form-signin col-xs-4 col-xs-offset-1" action="/services/recipient/login" method="post" style="padding-top: 2%">
+        <div id="signInReporter" style="padding-bottom: 2%"></div>
+        <% if (error) { %>
+        <div class="text-center alert" style="color: red; font-size: small; font-style: italic; padding-bottom: 1% "> <%= error %> </div>
+        <% } %>
+        <div class="input-group input-group-lg">
+          <span class="input-group-addon">
+            <span class="glyphicon glyphicon-envelope"></span>
+          </span>
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" id="inputEmail" name="username" class="form-control" placeholder="Email address" required autofocus>
+        </div>
+        <div style="padding-top: 2px"> &nbsp</div>
+
+        <div class="input-group input-group-lg">
+              <span class="input-group-addon">
+                <span class="glyphicon glyphicon-lock"></span>
+              </span>
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" minlength="8" required>
+        </div>
+
+        <div style="padding-bottom: 20px">&nbsp</div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" >SIGN IN</button>
+
+        <ul class="text-center" style="padding-top: 20px; padding-right: 40px">
+            <a class="link" href="/login/forgotPassword">Forgot your password?</a>
+        </ul>
+    </form>
+</div>
+<div class="container">
+    <div class="text-center">
+        Don't have an account? <a href="/recipient/signup">Sign Up</a>
+    </div>
+</div>
+<%include ../layout/footer.ejs%>
+
+
+<script src="/jquery/dist/jquery.min.js"></script>
+<script src="/angular/angular.min.js"></script>
+<script src="/jquery-validation/dist/jquery.validate.js"></script>
+<script src="/angularJs/willGiveApp.js"></script>
+<script src="/assets/js/messageReporter.js"></script>
+<script>
+    var reporter = new MessageReporter("signInReporter");
+    reporter.clear();
+
+    //@notice: name attribute in form, not id attributes
+    var formValidateParams = {
+        errorClass: "my-error-class",
+        //validClass: "my-valid-class",
+        rules: {
+            password: {
+                required: true,
+                minlength: 8
+                //remote: "users.php"
+            },
+            username: {
+                required : true,
+                email : true
+            }
+        },
+        messages: {
+            password: {
+                required: "Required.",
+                minlength: "Password at least 8 chars.",
+            },
+            username: {
+                required: "Required.",
+                email: "Please enter a validate email address.",
+                remote: "This email is already in use. Please use Forgot Password from the login page to retrieve account."
+            },
+            usage: "Please check my terms."
+        }
+    };
+    $("#recipientSignInForm").validate(
+            formValidateParams
+    );
+
+    /*
+     $( "#userSignInForm" ).submit(function( event ) {
+     event.preventDefault();
+     reporter.clear();
+
+     if (!$("#userSignInForm").valid()) {
+     console.log("Sign Up form is not valid!");
+     return;
+     }
+
+     var userAccountInfo={};
+     userAccountInfo.email = $('#signupEmail').val();
+     userAccountInfo.password = $('#signupPassword').val();
+     userAccountInfo.provider="willgive";
+
+     console.log("User Signing In!");
+     $.post("/services/login/signin", {userAccountInfo : userAccountInfo}, function(data){
+     if(data.isAuthenticated) {
+     console.log("user-"+userAccountInfo.email+" successfully logged in");
+     window.location.href="/";
+     } else {
+     reporter.errorStatus(data);
+     reporter.render();
+     }
+     })
+     });*/
+</script>
+</body>
+
+</html>
