--- a/views/recipientLogin/recipientSignUp.ejs
+++ b/views/recipientLogin/recipientSignUp.ejs
@@ -88,7 +88,7 @@
                     <label for="signupState" class="">State
                         <span style="color:red;">*</span>
                     </label>
-                    <select class="selectpicker form-control" required="true">
+                    <select id='signupState' class="selectpicker form-control" required="true">
                         <option value="AL">Alabama</option>
                         <option value="AK">Alaska</option>
                         <option value="AZ">Arizona</option>
@@ -166,7 +166,7 @@
                     <label for="signupCountry" class="">Country
                         <span style="color:red;">*</span>
                     </label>
-                    <select class="selectpicker form-control" required="true">
+                    <select id="signupCountry" class="form-control" required="true">
                         <option value="United States">United States</option>
                     </select>
                 </div>
@@ -214,17 +214,16 @@
 
                 </textarea>
             </div>
-
             <div style="padding-bottom: 1%"> &nbsp</div>
 
-            <button id="recipientSignupFormButton" class="btn btn-lg btn-primary btn-block"  type="submit" >Save And Next</button>
+            <button id="recipientSignupFormButton" class="btn btn-lg btn-primary btn-block"  type="submit" >SignUp And Next</button>
     </form>
 
 
 </div>
 <div class="container" style="padding-top: 2%">
     <div class="text-center" >
-        Already have an account? <a href="/recipient/signin">Sign In</a>
+        Already have an account? <a href="/recipient/login">Sign In</a>
     </div>
 </div>
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -236,8 +235,57 @@
     var reporter = new MessageReporter("recipientSignUpReporter");
     reporter.clear();
 
+    var formValidateParams = {
+        errorClass: "my-error-class",
+        //validClass: "my-valid-class",
+        rules: {
+            signupFirstName: "required",
+            signupLastName: "required",
+            signupOrganizationName: "required",
+            signupEIN: "required",
+            signupCategory: "required",
+            signupAddress: "required",
+            signupCity: "required",
+            signupState: "required",
+            signupZipCode: "required",
+            signupCountry: "required",
+            signupPhone: {
+                required: true,
+                digits: true
+            },
+            signupFax: {
+                digits:true
+            },
+            signupPassword: {
+                required: true,
+                minlength: 8
+                //remote: "users.php"
+            },
+            signupContactPersonName: "required",
+            signupContactPersonTitle: "required",
+            signupMission: "required",
+            signupPasswordConfirm : {
+                required: true,
+                minlength: 8,
+                equalTo : signupPassword
+            },
+            signupEmail: {
+                required : true,
+                email : true
+            }
+        }
+
+    };
+    $("#recipientSignupForm").validate(
+            formValidateParams
+    );
     $('#recipientSignupForm').submit(function(event){
         event.preventDefault();
+        if (!$("#recipientSignupForm").valid()) {
+            console.log("Recipient sign Up form is not valid!");
+            return;
+        }
+
         var recipientSignUpForm = {};
         recipientSignUpForm.email = $('#signupEmail').val();
         recipientSignUpForm.password = $('#signupPassword').val();
@@ -248,21 +296,24 @@
         recipientSignUpForm.state = $('#signupState').val();
         recipientSignUpForm.country = $('#signupCountry').val();
         recipientSignUpForm.zipCode = $('#signupZipCode').val();
-        recipientSignUpForm.websit = $('#signupWebsite').val();
+        recipientSignUpForm.website = $('#signupWebsite').val();
         recipientSignUpForm.phone = $('#signupPhone').val();
         recipientSignUpForm.fax = $('#signupFax').val();
         recipientSignUpForm.mission = $('#signupMission').val();
         recipientSignUpForm.facebookPage = $('#signupFacebookPage').val();
         recipientSignUpForm.contactPersonName= $('#signupContactPersonName').val();
         recipientSignUpForm.contactPersonTitle= $('#signupContactPersonTitle').val();
-        recipientSignUpForm.category = $('#signupCategory');
+        recipientSignUpForm.category = $('#signupCategory').val();
         //recipientSignUpForm.imageFile = $('#recipientProfileInput');
 
         console.dir(recipientSignUpForm);
         $.post("/services/recipient/signup",{recipientSignUpForm: recipientSignUpForm}, function(data){
-
+            reporter.clear();
             if(data == "success") {
-
+                windows.href('/recipient/designPage');
+            } else {
+                reporter.error(data);
+                reporter.render();
             }
         });
 
