--- a/views/recipientLogin/recipientSignUp2_upload.ejs
+++ b/views/recipientLogin/recipientSignUp2_upload.ejs
@@ -15,18 +15,20 @@
 
 <div class="container" style="min-height: 70%; width:40%">
     <div class="row">
-        <h2 class="form-signin-heading text-center">Charity SignUp - Deisgn Your Page</h2>
+        <h2 class="form-signin-heading text-center" style="padding-bottom: 2%">Design Your Page - Add Image</h2>
     </div>
-
-    <form action="/services/recipient/profilePictureUpload" id="profileIconUploadForm" method="post" enctype="multipart/form-data" onsubmit="return checkImageSize(200)">
-        <label for="recipientProfileInput" class="">Profile Picture</label>
+    <p for="recipientProfileInput" class="">You haven't finished your page yet.<strong> Please upload your page picture below.</strong></p>
+    <form action="/services/recipient/profilePictureUpload" id="profileIconUploadForm" method="post" enctype="multipart/form-data" onsubmit="return checkImageSize(1024)">
+        <div class="col-xs-12">
+            <img id="previewProfilePicture" src="/resources/recipients/<%=user.userId%>/profilePicture" class="text-center" alt="" width="100%" height="20%"/>
+        </div>
         <input type="hidden" name="MAX_FILE_SIZE" value="1024" />
         <input type="file" id="recipientProfileInput" name="recipientProfile" accept="image/*" >
         <div style="float: left">File size max 1M</div><br>
         <button id="submitProfileIconUploadFormButton" class="btn btn-lg btn-primary btn-block" type="submit" >Upload</button>
     </form>
     <div style="padding-bottom: 1%"> &nbsp</div>
-    <form action="/services/recipient/profileVideoUrlUpload" id="profileVideoUrlUploadFrom" method="post" enctype="multipart/form-data" onsubmit="">
+    <form style="display: none" action="/services/recipient/profileVideoUrlUpload" id="profileVideoUrlUploadFrom" method="post" enctype="multipart/form-data" onsubmit="">
         <label for="signupVideoUrl" class="">Or paste a YouTube link here</label>
         <input type="text" id="signupVideoUrl" name="signupVideoUrl" class="form-control" placeholder="http://">
         <button id="submitVideoUrlUploadFormButton" class="btn btn-lg btn-primary btn-block" type="submit" >Upload</button>
@@ -39,5 +41,26 @@
 <script src="/jquery-validation/dist/jquery.validate.js"></script>
 <script src="/angularJs/willGiveApp.js"></script>
 <script src="/assets/js/messageReporter.js"></script>
+
+<script>
+    //show the images immediately after choosing it, before upload
+    function readURL(input) {
+
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#previewProfilePicture').attr('src', e.target.result);
+            }
+
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+
+    $("#recipientProfileInput").change(function(){
+        readURL(this);
+    });
+
+</script>
 </body>
 </html>
