--- a/views/login/userContribution.ejs
+++ b/views/login/userContribution.ejs
@@ -38,7 +38,7 @@
                         <a href="/users/contribution" style="color: #000000;"><strong>My Contributions</strong></a>
                     </li>
                     <li>
-                        <a href="/users/collections" style="color: #000000;">My Collections</a>
+                        <a href="/users/collections" style="color: #000000;">My Favorites</a>
                     </li>
                 </ul>
             </div>
