--- a/views/login/userSettings.ejs
+++ b/views/login/userSettings.ejs
@@ -40,7 +40,7 @@
                         <a href="/users/contribution" style="color: #000000;">My Contributions</a>
                     </li>
                     <li>
-                        <a href="/users/collections" style="color: #000000;">My Collections</a>
+                        <a href="/users/collections" style="color: #000000;">My Favorites</a>
                     </li>
                 </ul>
             </div>
