--- a/views/recipientLogin/recipientLogin.ejs
+++ b/views/recipientLogin/recipientLogin.ejs
@@ -15,10 +15,10 @@
 </head>
 <body>
 
-<div class="container" style="height:auto; min-height: 90%; margin: 0 auto -80px;">
+<div class="container" style="width: 40%; height:auto; min-height: 90%; margin: 0 auto -80px;">
     <h2 class="form-signin-heading text-center">WillGive Charity Login</h2>
     <hr align="left" width="100%" background="0xff0000">
-    <form id="recipientSignInForm" class="form-signin col-xs-4 col-xs-offset-1" action="/services/recipient/login" method="post" style="padding-top: 2%">
+    <form id="recipientSignInForm" class="form-signin col-xs-12" action="/services/recipient/login" method="post" style="padding-top: 2%">
         <div id="signInReporter" style="padding-bottom: 2%"></div>
         <% if (error) { %>
         <div class="text-center alert" style="color: red; font-size: small; font-style: italic; padding-bottom: 1% "> <%= error %> </div>
